fix(08-01): update proof section with harder questions (integration, differentiation)

--- a/index.html
+++ b/index.html
@@ -5187,23 +5187,23 @@
                                     </div>
                                     <div class="report-topics">
                                         <div class="report-topic">
-                                            <span class="topic-name">Algebra</span>
+                                            <span class="topic-name">Differentiation</span>
                                             <span class="topic-score score-green">92%</span>
                                         </div>
                                         <div class="report-topic">
-                                            <span class="topic-name">Trigonometry</span>
+                                            <span class="topic-name">Integration</span>
                                             <span class="topic-score score-yellow">71%</span>
                                         </div>
                                         <div class="report-topic">
-                                            <span class="topic-name">Calculus</span>
+                                            <span class="topic-name">Applications</span>
                                             <span class="topic-score score-red">64%</span>
                                         </div>
                                     </div>
                                     <div class="report-focus">
                                         <div class="focus-label">Focus Areas</div>
                                         <div class="focus-tags">
-                                            <span class="focus-tag">Derivatives</span>
-                                            <span class="focus-tag">Identities</span>
+                                            <span class="focus-tag">By Parts</span>
+                                            <span class="focus-tag">Substitution</span>
                                         </div>
                                     </div>
                                 </div>
@@ -5222,10 +5222,10 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Year 11 Maths - Diagnostic</div>
                                 <div class="paper-content">
-                                    <div class="paper-question">Q1. Differentiate y = 3x² + 2x - 5</div>
-                                    <div class="paper-question">Q2. Find sin(π/4) + cos(π/3)</div>
-                                    <div class="paper-question">Q3. Solve: 2x² - 5x + 3 = 0</div>
-                                    <div class="paper-question">Q4. Prove that tan²θ + 1 = sec²θ</div>
+                                    <div class="paper-question">Q1. Find ∫ 2x·e^(x²) dx</div>
+                                    <div class="paper-question">Q2. Differentiate y = sin(x²)</div>
+                                    <div class="paper-question">Q3. Find ∫ x·cos(x) dx</div>
+                                    <div class="paper-question">Q4. Find dy/dx if x² + y² = 25</div>
                                 </div>
                             </div>
                         </div>
@@ -5242,10 +5242,10 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Answer Key</div>
                                 <div class="paper-content">
-                                    <div class="answer-row"><span class="answer-num">1.</span> 6x + 2</div>
-                                    <div class="answer-row"><span class="answer-num">2.</span> (√2 + 1)/2</div>
-                                    <div class="answer-row"><span class="answer-num">3.</span> x = 1.5, x = 1</div>
-                                    <div class="answer-row"><span class="answer-num">4.</span> See solutions</div>
+                                    <div class="answer-row"><span class="answer-num">1.</span> e^(x²) + C</div>
+                                    <div class="answer-row"><span class="answer-num">2.</span> 2x·cos(x²)</div>
+                                    <div class="answer-row"><span class="answer-num">3.</span> x·sin(x) + cos(x) + C</div>
+                                    <div class="answer-row"><span class="answer-num">4.</span> dy/dx = -x/y</div>
                                 </div>
                             </div>
                         </div>
@@ -5262,11 +5262,11 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Worked Solutions</div>
                                 <div class="paper-content">
-                                    <div class="solution-q">Q1. Differentiate y = 3x² + 2x - 5</div>
-                                    <div class="solution-step">Step 1: Apply power rule</div>
-                                    <div class="solution-step">Step 2: d/dx(3x²) = 6x</div>
-                                    <div class="solution-step">Step 3: d/dx(2x) = 2</div>
-                                    <div class="solution-answer">Answer: dy/dx = 6x + 2</div>
+                                    <div class="solution-q">Q1. Find ∫ 2x·e^(x²) dx</div>
+                                    <div class="solution-step">Step 1: Let u = x²</div>
+                                    <div class="solution-step">Step 2: du/dx = 2x, so du = 2x dx</div>
+                                    <div class="solution-step">Step 3: ∫ e^u du = e^u + C</div>
+                                    <div class="solution-answer">Answer: e^(x²) + C</div>
                                 </div>
                             </div>
                         </div>
