--- a/index.html
+++ b/index.html
@@ -5243,9 +5243,9 @@
                                 <div class="paper-title">Answer Key</div>
                                 <div class="paper-content">
                                     <div class="answer-row"><span class="answer-num">1.</span> e<sup>x²</sup> + C</div>
-                                    <div class="answer-row"><span class="answer-num">2.</span> 2x·cos(x<sup>2</sup>)</div>
-                                    <div class="answer-row"><span class="answer-num">3.</span> x·sin(x) + cos(x) + C</div>
-                                    <div class="answer-row"><span class="answer-num">4.</span> dy/dx = -x/y</div>
+                                    <div class="answer-row"><span class="answer-num">2.</span> 2x cos(x²)</div>
+                                    <div class="answer-row"><span class="answer-num">3.</span> x sin(x) + cos(x) + C</div>
+                                    <div class="answer-row"><span class="answer-num">4.</span> −x/y</div>
                                 </div>
                             </div>
                         </div>
