fix(08-01): tighten superscript positioning in mockups

--- a/index.html
+++ b/index.html
@@ -1255,6 +1255,15 @@
             padding-left: 4px;
         }
 
+        /* Math superscripts in mockups */
+        .paper-mockup sup {
+            font-size: 0.65em;
+            vertical-align: super;
+            line-height: 0;
+            position: relative;
+            top: -0.1em;
+        }
+
         /* Answer Key specific */
         .answer-row {
             display: flex;
