--- a/index.html
+++ b/index.html
@@ -5222,10 +5222,10 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Year 11 Maths - Diagnostic</div>
                                 <div class="paper-content">
-                                    <div class="paper-question">Q1. Find ∫ 2xe^(x²) dx</div>
-                                    <div class="paper-question">Q2. Differentiate y = sin(x²)</div>
+                                    <div class="paper-question">Q1. Find ∫ 2xe^(x&sup2;) dx</div>
+                                    <div class="paper-question">Q2. Differentiate y = sin(x&sup2;)</div>
                                     <div class="paper-question">Q3. Find ∫ x cos(x) dx</div>
-                                    <div class="paper-question">Q4. Find dy/dx if x² + y² = 25</div>
+                                    <div class="paper-question">Q4. Find dy/dx if x&sup2; + y&sup2; = 25</div>
                                 </div>
                             </div>
                         </div>
@@ -5242,8 +5242,8 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Answer Key</div>
                                 <div class="paper-content">
-                                    <div class="answer-row"><span class="answer-num">1.</span> e^(x²) + C</div>
-                                    <div class="answer-row"><span class="answer-num">2.</span> 2x cos(x²)</div>
+                                    <div class="answer-row"><span class="answer-num">1.</span> e^(x&sup2;) + C</div>
+                                    <div class="answer-row"><span class="answer-num">2.</span> 2x cos(x&sup2;)</div>
                                     <div class="answer-row"><span class="answer-num">3.</span> x sin(x) + cos(x) + C</div>
                                     <div class="answer-row"><span class="answer-num">4.</span> −x/y</div>
                                 </div>
@@ -5262,11 +5262,11 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Worked Solutions</div>
                                 <div class="paper-content">
-                                    <div class="solution-q">Q1. Find ∫ 2xe^(x²) dx</div>
-                                    <div class="solution-step">Step 1: Let u = x²</div>
+                                    <div class="solution-q">Q1. Find ∫ 2xe^(x&sup2;) dx</div>
+                                    <div class="solution-step">Step 1: Let u = x&sup2;</div>
                                     <div class="solution-step">Step 2: du/dx = 2x, so du = 2x dx</div>
-                                    <div class="solution-step">Step 3: ∫ eᵘ du = eᵘ + C</div>
-                                    <div class="solution-answer">Answer: e^(x²) + C</div>
+                                    <div class="solution-step">Step 3: ∫ e^u du = e^u + C</div>
+                                    <div class="solution-answer">Answer: e^(x&sup2;) + C</div>
                                 </div>
                             </div>
                         </div>
