fix(08-01): proper math superscripts with tight CSS positioning

--- a/index.html
+++ b/index.html
@@ -1255,6 +1255,15 @@
             padding-left: 4px;
         }
 
+        /* Math superscripts - tight to base character */
+        .paper-mockup sup {
+            font-size: 0.6em;
+            vertical-align: top;
+            position: relative;
+            top: -0.3em;
+            margin-left: -0.1em;
+        }
+
         /* Answer Key specific */
         .answer-row {
             display: flex;
@@ -5222,10 +5231,10 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Year 11 Maths - Diagnostic</div>
                                 <div class="paper-content">
-                                    <div class="paper-question">Q1. Find ∫ 2x e^(x^2) dx</div>
-                                    <div class="paper-question">Q2. Differentiate y = sin(x^2)</div>
+                                    <div class="paper-question">Q1. Find ∫ 2x e<sup>x<sup>2</sup></sup> dx</div>
+                                    <div class="paper-question">Q2. Differentiate y = sin(x<sup>2</sup>)</div>
                                     <div class="paper-question">Q3. Find ∫ x cos(x) dx</div>
-                                    <div class="paper-question">Q4. Find dy/dx if x^2 + y^2 = 25</div>
+                                    <div class="paper-question">Q4. Find dy/dx if x<sup>2</sup> + y<sup>2</sup> = 25</div>
                                 </div>
                             </div>
                         </div>
@@ -5242,8 +5251,8 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Answer Key</div>
                                 <div class="paper-content">
-                                    <div class="answer-row"><span class="answer-num">1.</span> e^(x^2) + C</div>
-                                    <div class="answer-row"><span class="answer-num">2.</span> 2x cos(x^2)</div>
+                                    <div class="answer-row"><span class="answer-num">1.</span> e<sup>x<sup>2</sup></sup> + C</div>
+                                    <div class="answer-row"><span class="answer-num">2.</span> 2x cos(x<sup>2</sup>)</div>
                                     <div class="answer-row"><span class="answer-num">3.</span> x sin(x) + cos(x) + C</div>
                                     <div class="answer-row"><span class="answer-num">4.</span> -x/y</div>
                                 </div>
@@ -5262,11 +5271,11 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Worked Solutions</div>
                                 <div class="paper-content">
-                                    <div class="solution-q">Q1. Find ∫ 2x e^(x^2) dx</div>
-                                    <div class="solution-step">Step 1: Let u = x^2</div>
+                                    <div class="solution-q">Q1. Find ∫ 2x e<sup>x<sup>2</sup></sup> dx</div>
+                                    <div class="solution-step">Step 1: Let u = x<sup>2</sup></div>
                                     <div class="solution-step">Step 2: du/dx = 2x, so du = 2x dx</div>
-                                    <div class="solution-step">Step 3: ∫ e^u du = e^u + C</div>
-                                    <div class="solution-answer">Answer: e^(x^2) + C</div>
+                                    <div class="solution-step">Step 3: ∫ e<sup>u</sup> du = e<sup>u</sup> + C</div>
+                                    <div class="solution-answer">Answer: e<sup>x<sup>2</sup></sup> + C</div>
                                 </div>
                             </div>
                         </div>
