--- a/index.html
+++ b/index.html
@@ -5222,7 +5222,7 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Year 11 Maths - Diagnostic</div>
                                 <div class="paper-content">
-                                    <div class="paper-question">Q1. Find ∫ 2x·e^(x²) dx</div>
+                                    <div class="paper-question">Q1. Find ∫ 2x·e<sup>x²</sup> dx</div>
                                     <div class="paper-question">Q2. Differentiate y = sin(x²)</div>
                                     <div class="paper-question">Q3. Find ∫ x·cos(x) dx</div>
                                     <div class="paper-question">Q4. Find dy/dx if x² + y² = 25</div>
@@ -5242,7 +5242,7 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Answer Key</div>
                                 <div class="paper-content">
-                                    <div class="answer-row"><span class="answer-num">1.</span> e^(x²) + C</div>
+                                    <div class="answer-row"><span class="answer-num">1.</span> e<sup>x²</sup> + C</div>
                                     <div class="answer-row"><span class="answer-num">2.</span> 2x·cos(x²)</div>
                                     <div class="answer-row"><span class="answer-num">3.</span> x·sin(x) + cos(x) + C</div>
                                     <div class="answer-row"><span class="answer-num">4.</span> −x/y</div>
@@ -5262,11 +5262,11 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Worked Solutions</div>
                                 <div class="paper-content">
-                                    <div class="solution-q">Q1. Find ∫ 2x·e^(x²) dx</div>
+                                    <div class="solution-q">Q1. Find ∫ 2x·e<sup>x²</sup> dx</div>
                                     <div class="solution-step">Step 1: Let u = x²</div>
                                     <div class="solution-step">Step 2: du/dx = 2x, so du = 2x dx</div>
-                                    <div class="solution-step">Step 3: ∫ eᵘ du = eᵘ + C</div>
-                                    <div class="solution-answer">Answer: e^(x²) + C</div>
+                                    <div class="solution-step">Step 3: ∫ e<sup>u</sup> du = e<sup>u</sup> + C</div>
+                                    <div class="solution-answer">Answer: e<sup>x²</sup> + C</div>
                                 </div>
                             </div>
                         </div>
