--- a/index.html
+++ b/index.html
@@ -5130,6 +5130,17 @@
                                     </div>
                                 </div>
                                 <div class="hero-mockup-section">
+                                    <div class="hero-mockup-label">Question Type</div>
+                                    <div class="hero-mockup-row">
+                                        <span>Multiple Choice</span>
+                                        <span class="score-green">85%</span>
+                                    </div>
+                                    <div class="hero-mockup-row">
+                                        <span>Short Answer</span>
+                                        <span class="score-yellow">68%</span>
+                                    </div>
+                                </div>
+                                <div class="hero-mockup-section">
                                     <div class="hero-mockup-label">Topic Breakdown</div>
                                     <div class="hero-mockup-row">
                                         <span>Algebra</span>
@@ -5242,7 +5253,7 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Answer Key</div>
                                 <div class="paper-content">
-                                    <div class="answer-row"><span class="answer-num">1.</span> e<sup>x²</sup> + C</div>
+                                    <div class="answer-row"><span class="answer-num">1.</span> e^(x²) + C</div>
                                     <div class="answer-row"><span class="answer-num">2.</span> 2x·cos(x²)</div>
                                     <div class="answer-row"><span class="answer-num">3.</span> x·sin(x) + cos(x) + C</div>
                                     <div class="answer-row"><span class="answer-num">4.</span> −x/y</div>
