fix(08-01): answer key uses same sup tag as diagnostic, hero shows MCQ/SA under 78%

--- a/index.html
+++ b/index.html
@@ -5126,11 +5126,7 @@
                                     <div class="hero-mockup-label">Current Score</div>
                                     <div class="hero-mockup-score">
                                         <span class="score-value">78%</span>
-                                        <span class="score-badge score-yellow">Needs Practice</span>
                                     </div>
-                                </div>
-                                <div class="hero-mockup-section">
-                                    <div class="hero-mockup-label">Question Type</div>
                                     <div class="hero-mockup-row">
                                         <span>Multiple Choice</span>
                                         <span class="score-green">85%</span>
@@ -5253,7 +5249,7 @@
                                 <div class="paper-header">BEAM Academy</div>
                                 <div class="paper-title">Answer Key</div>
                                 <div class="paper-content">
-                                    <div class="answer-row"><span class="answer-num">1.</span> e^(x²) + C</div>
+                                    <div class="answer-row"><span class="answer-num">1.</span> e<sup>x²</sup> + C</div>
                                     <div class="answer-row"><span class="answer-num">2.</span> 2x·cos(x²)</div>
                                     <div class="answer-row"><span class="answer-num">3.</span> x·sin(x) + cos(x) + C</div>
                                     <div class="answer-row"><span class="answer-num">4.</span> −x/y</div>
