fix(08-01): score-value purple color, answer-row baseline alignment for sup

--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
             font-family: var(--font-display);
             font-size: 2.5rem;
             font-weight: 700;
-            color: white;
+            color: var(--purple-700);
         }
 
         .score-badge {
@@ -1258,6 +1258,7 @@
         /* Answer Key specific */
         .answer-row {
             display: flex;
+            align-items: baseline;
             gap: 8px;
             margin-bottom: 8px;
             line-height: 1.4;
