fix(08-01): remove flex from answer-row, use inline flow like diagnostic

--- a/index.html
+++ b/index.html
@@ -1257,16 +1257,13 @@
 
         /* Answer Key specific */
         .answer-row {
-            display: flex;
-            align-items: baseline;
-            gap: 8px;
             margin-bottom: 8px;
             line-height: 1.4;
         }
 
         .answer-num {
             font-weight: bold;
-            min-width: 20px;
+            margin-right: 8px;
         }
 
         /* Worked Solutions specific */
