fix(08): replace Q4 with integration by parts question

--- a/index.html
+++ b/index.html
@@ -5230,7 +5230,7 @@
                                     <div class="paper-question">Q1. Find ∫ 2x·e<sup>x²</sup> dx</div>
                                     <div class="paper-question">Q2. Differentiate y = sin(x²)</div>
                                     <div class="paper-question">Q3. Find ∫ x·cos(x) dx</div>
-                                    <div class="paper-question">Q4. Find dy/dx if x² + y² = 25</div>
+                                    <div class="paper-question">Q4. Find ∫ x·ln(x) dx</div>
                                 </div>
                             </div>
                         </div>
@@ -5250,7 +5250,7 @@
                                     <div class="answer-row"><span class="answer-num">1.</span> e<sup>x²</sup> + C</div>
                                     <div class="answer-row"><span class="answer-num">2.</span> 2x·cos(x²)</div>
                                     <div class="answer-row"><span class="answer-num">3.</span> x·sin(x) + cos(x) + C</div>
-                                    <div class="answer-row"><span class="answer-num">4.</span> −x/y</div>
+                                    <div class="answer-row"><span class="answer-num">4.</span> (x²/2)ln(x) − x²/4 + C</div>
                                 </div>
                             </div>
                         </div>
