feat(09-01): add trust section HTML
- Add trust section with 3 tutor profiles (Chris, Nathan, John)
- Include trifecta badges (BHHS Graduate, HSC score, Medicine @ uni)
- Add 6-8 max group size promise callout
- Add parent testimonial with 68% to 89% improvement
- Include school-specific matching mention (Baulko, James Ruse, Epping Boys)
- Section positioned between comparison and about sections

--- a/index.html
+++ b/index.html
@@ -5362,6 +5362,103 @@
             </div>
         </section>
 
+
+        <!-- Trust Section -->
+        <section class="trust-section" id="trust" aria-labelledby="trust-title">
+            <div class="container">
+                <header class="section-header">
+                    <div class="trust-badge">
+                        <svg class="trust-badge-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+                            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
+                            <polyline points="22 4 12 14.01 9 11.01"/>
+                        </svg>
+                        All Baulkham Hills High School Graduates
+                    </div>
+                    <h2 class="section-title" id="trust-title">Tutors Who've Been There</h2>
+                    <p class="section-description">Our tutors achieved 95%+ in HSC Mathematics and are now studying medicine.</p>
+                </header>
+
+                <div class="trust-tutors">
+                    <!-- Chris Kim -->
+                    <article class="tutor-card">
+                        <div class="tutor-image">
+                            <img src="images/chris.jpg" alt="Chris Kim, Head of Mathematics at BEAM Academy" width="400" height="400" loading="lazy">
+                        </div>
+                        <h3 class="tutor-name">Chris Kim</h3>
+                        <div class="tutor-role">Head of Mathematics</div>
+                        <div class="tutor-trifecta">
+                            <span class="trifecta-badge trifecta-school">BHHS Graduate</span>
+                            <span class="trifecta-badge trifecta-hsc">97 Maths Ext1</span>
+                            <span class="trifecta-badge trifecta-uni">Medicine @ Newcastle</span>
+                        </div>
+                        <ul class="tutor-credentials">
+                            <li>93 Maths Ext2</li>
+                            <li>95 Physics</li>
+                            <li>98th percentile UCAT</li>
+                        </ul>
+                    </article>
+
+                    <!-- Nathan You -->
+                    <article class="tutor-card">
+                        <div class="tutor-image">
+                            <img src="images/nathan.jpg" alt="Nathan You, Tutor at BEAM Academy" width="400" height="400" loading="lazy">
+                        </div>
+                        <h3 class="tutor-name">Nathan You</h3>
+                        <div class="tutor-role">Tutor</div>
+                        <div class="tutor-trifecta">
+                            <span class="trifecta-badge trifecta-school">BHHS Graduate</span>
+                            <span class="trifecta-badge trifecta-hsc">95 Maths Ext1</span>
+                            <span class="trifecta-badge trifecta-uni">Medicine @ Newcastle</span>
+                        </div>
+                        <ul class="tutor-credentials">
+                            <li>95 Maths Ext2</li>
+                            <li>99th percentile UCAT</li>
+                        </ul>
+                    </article>
+
+                    <!-- John Park -->
+                    <article class="tutor-card">
+                        <div class="tutor-image">
+                            <img src="images/john.jpg" alt="John Park, Tutor at BEAM Academy" width="400" height="400" loading="lazy">
+                        </div>
+                        <h3 class="tutor-name">John Park</h3>
+                        <div class="tutor-role">Tutor</div>
+                        <div class="tutor-trifecta">
+                            <span class="trifecta-badge trifecta-school">BHHS Graduate</span>
+                            <span class="trifecta-badge trifecta-hsc">95 English Adv</span>
+                            <span class="trifecta-badge trifecta-uni">Medicine @ UNSW</span>
+                        </div>
+                        <ul class="tutor-credentials">
+                            <li>96 Maths Ext1</li>
+                            <li>96 Maths Ext2</li>
+                        </ul>
+                    </article>
+                </div>
+
+                <div class="trust-promise">
+                    <div class="promise-number">6-8<span>Max</span></div>
+                    <div class="promise-content">
+                        <strong>students per class</strong>
+                        <span>Every student gets individual attention</span>
+                    </div>
+                </div>
+
+                <p class="trust-schools">Tutors who know your school's assessment style - Baulko, James Ruse, Epping Boys</p>
+
+                <div class="trust-testimonial">
+                    <blockquote class="parent-quote">
+                        After 2 terms at BEAM, my son's Maths assessment improved from <strong>68% to 89%</strong>. The tutors identified exactly which topics he was struggling with.
+                    </blockquote>
+                    <div class="testimonial-author">
+                        <div class="testimonial-avatar" aria-hidden="true">P</div>
+                        <div>
+                            <div class="testimonial-name">Parent of Year 11 Student</div>
+                            <div class="testimonial-school">Baulkham Hills High School</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- About Section -->
         <section class="about" id="about" aria-labelledby="about-title">
             <div class="container">
