--- a/index.html
+++ b/index.html
@@ -1580,6 +1580,209 @@
             font-weight: 600;
         }
 
+        /* ========== Support Section ========== */
+        .support-section {
+            padding: var(--section-padding);
+            background: var(--gray-50);
+        }
+
+        /* Badge (adapt from trust-badge pattern) */
+        .support-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            background: var(--purple-100);
+            color: var(--purple-700);
+            padding: 10px 24px;
+            border-radius: 100px;
+            font-family: var(--font-display);
+            font-size: 0.9rem;
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+
+        .support-badge svg,
+        .support-badge-icon {
+            width: 20px;
+            height: 20px;
+        }
+
+        /* Discord Mockup Container */
+        .discord-mockup {
+            background: #36393F;
+            border-radius: 16px;
+            overflow: hidden;
+            max-width: 550px;
+            margin: 0 auto;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
+            font-family: 'gg sans', 'Noto Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        }
+
+        .discord-header {
+            background: #2F3136;
+            padding: 12px 16px;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+        }
+
+        .discord-channel {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            color: #FFFFFF;
+            font-weight: 600;
+            font-size: 1rem;
+        }
+
+        .discord-hash {
+            color: #8E9297;
+            font-size: 1.2rem;
+        }
+
+        .discord-messages {
+            padding: 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        .discord-message {
+            display: flex;
+            gap: 16px;
+        }
+
+        .discord-avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 600;
+            font-size: 1rem;
+        }
+
+        .discord-avatar-student {
+            background: #5865F2;
+            color: white;
+        }
+
+        .discord-avatar-tutor {
+            background: linear-gradient(135deg, var(--purple-600), var(--purple-700));
+            overflow: hidden;
+        }
+
+        .discord-avatar-tutor img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .discord-message-content {
+            flex: 1;
+            min-width: 0;
+        }
+
+        .discord-message-header {
+            display: flex;
+            align-items: baseline;
+            gap: 8px;
+            margin-bottom: 4px;
+            flex-wrap: wrap;
+        }
+
+        .discord-username {
+            color: #FFFFFF;
+            font-weight: 500;
+            font-size: 1rem;
+        }
+
+        .discord-tutor {
+            color: var(--purple-400);
+        }
+
+        .discord-role {
+            background: rgba(124, 58, 237, 0.3);
+            color: var(--purple-300);
+            font-size: 0.7rem;
+            padding: 2px 6px;
+            border-radius: 4px;
+            text-transform: uppercase;
+            font-weight: 600;
+        }
+
+        .discord-timestamp {
+            color: #72767D;
+            font-size: 0.75rem;
+        }
+
+        .discord-message-text {
+            color: #DCDDDE;
+            font-size: 0.95rem;
+            line-height: 1.4;
+        }
+
+        /* Support Features */
+        .support-features {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-top: 40px;
+            max-width: 400px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .support-feature {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+        }
+
+        .support-feature-icon {
+            width: 48px;
+            height: 48px;
+            background: var(--purple-100);
+            border-radius: 12px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: var(--purple-700);
+            flex-shrink: 0;
+        }
+
+        .support-feature-icon svg {
+            width: 24px;
+            height: 24px;
+        }
+
+        .support-feature-text {
+            font-family: var(--font-display);
+            font-size: 1rem;
+            color: var(--gray-700);
+            font-weight: 500;
+        }
+
+        /* Desktop: Side-by-side layout */
+        @media (min-width: 900px) {
+            .support-content {
+                display: flex;
+                justify-content: center;
+                gap: 60px;
+                align-items: flex-start;
+            }
+
+            .discord-mockup {
+                flex: 0 1 500px;
+                margin: 0;
+            }
+
+            .support-features {
+                flex: 0 1 320px;
+                margin-top: 0;
+            }
+        }
+
         /* About */
         .about { background: var(--gray-50); }
 
@@ -4100,6 +4303,49 @@
             }
         }
 
+        /* Support Section Mobile */
+        @media (max-width: 768px) {
+            .discord-mockup {
+                border-radius: 12px;
+            }
+
+            .discord-avatar {
+                width: 32px;
+                height: 32px;
+                font-size: 0.875rem;
+            }
+
+            .discord-message {
+                gap: 12px;
+            }
+
+            .discord-message-text {
+                font-size: 0.9rem;
+            }
+
+            .discord-timestamp {
+                font-size: 0.7rem;
+            }
+
+            .support-features {
+                gap: 16px;
+            }
+
+            .support-feature-icon {
+                width: 40px;
+                height: 40px;
+            }
+
+            .support-feature-icon svg {
+                width: 20px;
+                height: 20px;
+            }
+
+            .support-feature-text {
+                font-size: 0.9rem;
+            }
+        }
+
         /* Professional Icon Styling */
         .course-icon {
             width: 56px;
@@ -5731,6 +5977,99 @@
                         <div>
                             <div class="testimonial-name">Parent of Year 11 Student</div>
                             <div class="testimonial-school">Baulkham Hills High School</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="support-section" id="support" aria-labelledby="support-title">
+            <div class="container">
+                <header class="section-header">
+                    <div class="support-badge">
+                        <svg class="support-badge-icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                            <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/>
+                        </svg>
+                        24/7 Discord Community
+                    </div>
+                    <h2 class="section-title" id="support-title">Stuck at 9pm? Help by 10am.</h2>
+                    <p class="section-description">
+                        Your child isn't alone between classes. Our tutors respond to homework questions
+                        in our private Discord - usually within hours, always by the next morning.
+                    </p>
+                </header>
+
+                <div class="support-content">
+                    <!-- Discord Mockup -->
+                    <div class="discord-mockup">
+                        <div class="discord-header">
+                            <div class="discord-channel">
+                                <span class="discord-hash" aria-hidden="true">#</span>
+                                maths-help
+                            </div>
+                        </div>
+                        <div class="discord-messages" aria-hidden="true">
+                            <!-- Student message: 9:14 PM -->
+                            <div class="discord-message">
+                                <div class="discord-avatar discord-avatar-student">S</div>
+                                <div class="discord-message-content">
+                                    <div class="discord-message-header">
+                                        <span class="discord-username">Sarah</span>
+                                        <span class="discord-timestamp">Today at 9:14 PM</span>
+                                    </div>
+                                    <div class="discord-message-text">
+                                        Can someone help with integration by parts? The one with ln(x) - stuck on Q3 of this week's worksheet
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Tutor response: 9:47 PM (33 min response time) -->
+                            <div class="discord-message">
+                                <div class="discord-avatar discord-avatar-tutor">
+                                    <img src="images/chris.jpg" alt="" width="40" height="40">
+                                </div>
+                                <div class="discord-message-content">
+                                    <div class="discord-message-header">
+                                        <span class="discord-username discord-tutor">Chris</span>
+                                        <span class="discord-role">Tutor</span>
+                                        <span class="discord-timestamp">Today at 9:47 PM</span>
+                                    </div>
+                                    <div class="discord-message-text">
+                                        For integration by parts with ln(x), set u = ln(x) and dv = x dx. I'll send you the worked solution - check your DMs!
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Supporting Features -->
+                    <div class="support-features">
+                        <div class="support-feature">
+                            <div class="support-feature-icon" aria-hidden="true">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="12" cy="12" r="10"/>
+                                    <polyline points="12 6 12 12 16 14"/>
+                                </svg>
+                            </div>
+                            <span class="support-feature-text">Responses within hours, not days</span>
+                        </div>
+                        <div class="support-feature">
+                            <div class="support-feature-icon" aria-hidden="true">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <rect x="3" y="11" width="18" height="11" rx="2" ry="2"/>
+                                    <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
+                                </svg>
+                            </div>
+                            <span class="support-feature-text">Private server - BEAM students only</span>
+                        </div>
+                        <div class="support-feature">
+                            <div class="support-feature-icon" aria-hidden="true">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                                    <circle cx="9" cy="7" r="4"/>
+                                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                                    <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                                </svg>
+                            </div>
+                            <span class="support-feature-text">Same tutors who teach your classes</span>
                         </div>
                     </div>
                 </div>
