fix(11-03): shorten nav CTA to prevent button overflow

--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
             font-weight: 600;
             font-size: 0.9rem;
             transition: all 0.2s ease;
+            white-space: nowrap;
         }
 
         .nav-cta:hover {
@@ -5583,7 +5584,7 @@
                     <li><a href="#faq" class="nav-link">FAQ</a></li>
                     <li><a href="https://beamffef.netlify.app/login" class="nav-link" target="_blank" rel="noopener">Student Portal</a></li>
                     <li><a href="#contact" class="nav-cta nav-cta-secondary" data-action="pay">Pay Now</a></li>
-                    <li><a href="#contact" class="nav-cta">Get Your Free Diagnostic</a></li>
+                    <li><a href="#contact" class="nav-cta">Free Diagnostic</a></li>
                 </ul>
                 <button class="mobile-toggle" aria-label="Toggle menu" aria-expanded="false" aria-controls="mobile-nav">
                     <span></span>
